Implemented contract function calling
